<resources>
    <string name="app_name">NutriiApp</string>
    <string name="NutriiApp">NutriiApp</string>
    <string name="Bienvenida">¡Hola!, Por favor, contesta el \n siguiente cuestionario: </string>
    <string name="Nombre">Nombre</string>
    <string name="NumCel">Número de Celular</string>
    <string name="FechaNacimiento">Fecha de Nacimiento</string>
    <string name="Hombre">Hombre</string>
    <string name="Mujer">Mujer</string>
    <string name="btnContinuar">CONTINUAR</string>
    <string name="Antecedentes">Antecedentes heredo-familiares</string>
    <string name="TxtPreguntasClinicas">Las siguientes preguntas sono para conocer su historial clinico</string>
    <string name="swDiabetes">Diabetes</string>
    <string name="swHipertension">Hipertension arterial</string>
    <string name="swTiroides">Problemas de tiroides</string>
    <string name="swObesidad">Obesidad</string>
    <string name="swCancer">Cancer</string>
    <string name="AntecedentesNoPatologicos">Escribe si tienes antecedentes\npersonales no patologicos:</string>
    <string name="CuadroAntecedentes">Escribe en minusculas. Se breve.</string>
    <string name="Continua">Continua respondiendo…</string>
    <string name="Frecuencia">¿Con qué frecuencia realizas actividad física?</string>
    <string name="Ligera">Ligera (1–3 veces a la semana)</string>
    <string name="Moderada">Moderada (3–5 veces a la semana)</string>
    <string name="Intensa">Intensa (6–7 veces a la semana)</string>
    <string name="Gym">Gym / Pesas</string>
    <string name="Crossfit">Crossfit</string>
    <string name="Baloncesto">Baloncesto</string>
    <string name="Futbol">Futbol</string>
    <string name="Natacion">Natación</string>
    <string name="Volleyball">Volleyball</string>
    <string name="edtDeportes">Otro tipo de Deporte…</string>
    <string name="Alcohol">Consumes Alcohol</string>
    <string name="Fumas">Fumas</string>
    <string name="ComidasDia">Numero de Comidas al día</string>
    <string name="AlimentosIntolerantes">Intolerancia a alimentos…</string>
    <string name="AlimentosDisgusto">Alimentos que Disgustas…</string>
    <string name="Monto">Monto a pagar (Ej. $2000)</string>
    <string name="UnMenuMes">1 Menú al mes</string>
    <string name="MenuDosSemana">1 Menú cada 2 semanas</string>
    <string name="MenuLaSemana">1 Menú cada semana</string>
    <string name="HabitosAlimenticios">Habitos Alimenticios</string>
    <string name="InstruccionMonto">Ingresa el monto</string>
    <string name="DeportePracticas">¿Qué deporte o ejercicio practicas?</string>
    <string name="AbrirCamara">Abrir Camara</string>
    <string name="MostrarUbicacion">Ubicacion</string>
    <string name="MostrarDieta">Mostrar Dietas</string>
    <string name="Salir">Salir</string>
    <string name="Galeria">Galeria</string>
    <string name="Camara">Camara</string>
    <string name="Map">Map</string>
</resources>