<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FourthActivity">

    <Button
        android:id="@+id/btnContinuar4"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="@dimen/btnAlto"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/RosaBotones"
        android:text="@string/btnContinuar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbGym"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:buttonTint="@color/RosaBotones"
        android:text="@string/Gym"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEjercicio" />

    <CheckBox
        android:id="@+id/cbCrossfit"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/RosaBotones"
        android:text="@string/Crossfit"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbGym" />

    <CheckBox
        android:id="@+id/cbBaloncesto"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/RosaBotones"
        android:text="@string/Baloncesto"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCrossfit" />

    <CheckBox
        android:id="@+id/cbFutbol"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/RosaBotones"
        android:text="@string/Futbol"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbBaloncesto" />

    <CheckBox
        android:id="@+id/cbNatacion"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/RosaBotones"
        android:text="@string/Natacion"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbFutbol" />

    <CheckBox
        android:id="@+id/cbVolleyball"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/RosaBotones"
        android:text="@string/Volleyball"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbNatacion" />

    <TextView
        android:id="@+id/txtEjercicio"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/DeportePracticas"
        android:textColor="@color/RosaNutriapp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>