<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ThirdActivity">

    <Button
        android:id="@+id/btnContinuar3"
        android:layout_width="@dimen/btnLargo"
        android:layout_height="@dimen/btnAlto"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/RosaBotones"
        android:text="@string/btnContinuar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtFrecuencia"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Frecuencia"
        android:textColor="@color/RosaNutriapp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContinua" />

    <TextView
        android:id="@+id/txtContinua"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Continua"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/cbLigera"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Ligera"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFrecuencia" />

    <CheckBox
        android:id="@+id/cbModerada"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Moderada"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbLigera" />

    <CheckBox
        android:id="@+id/cbIntensa"
        android:layout_width="@dimen/EdtCuestionarioLargo"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Intensa"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbModerada" />

</androidx.constraintlayout.widget.ConstraintLayout>