<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainMenuActivity">

    <ImageView
        android:id="@+id/imgNutriilogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nutriilogo" />

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="@dimen/btnPequenoLargo"
        android:layout_height="@dimen/btnPequenoAlto"
        android:layout_marginStart="40dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/RosaBotones"
        android:text="@string/AbrirCamara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNutriilogo" />

    <Button
        android:id="@+id/btnDietas"
        android:layout_width="@dimen/btnPequenoLargo"
        android:layout_height="@dimen/btnPequenoAlto"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/RosaBotones"
        android:text="@string/MostrarDieta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCamara" />

    <Button
        android:id="@+id/btnUbicacion"
        android:layout_width="@dimen/btnPequenoLargo"
        android:layout_height="@dimen/btnPequenoAlto"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/RosaBotones"
        android:text="@string/MostrarUbicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNutriilogo" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="@dimen/btnPequenoLargo"
        android:layout_height="@dimen/btnPequenoAlto"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/RosaBotones"
        android:text="@string/Salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUbicacion" />

</androidx.constraintlayout.widget.ConstraintLayout>